package service

import (
	"context"
	"errors"
	"fmt"
	"mime/multipart"
	"path/filepath"
	"time"

	"Chimera-RAG/backend-go/internal/data"
	"Chimera-RAG/backend-go/internal/dto"
	"Chimera-RAG/backend-go/internal/model"
	"github.com/google/uuid"
	"github.com/minio/minio-go/v7"

	pb "Chimera-RAG/backend-go/api/rag/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

type FileService struct {
	Data *data.Data
}

func NewFileService(data *data.Data) *FileService {
	return &FileService{Data: data}
}

// UploadFile ä¸Šä¼ æ–‡ä»¶å¹¶ç»‘å®šåˆ°çŸ¥è¯†åº“
func (s *FileService) UploadFile(ctx context.Context, userID uint, fileHeader *multipart.FileHeader, kbID uint) (*dto.FileResp, error) {
	// 1. æŸ¥æ‰¾çŸ¥è¯†åº“ä¿¡æ¯ (ç”¨äºŽé‰´æƒ)
	var kb model.KnowledgeBase
	if err := s.Data.DB.First(&kb, kbID).Error; err != nil {
		return nil, errors.New("çŸ¥è¯†åº“ä¸å­˜åœ¨")
	}

	// 2. çº§è”é‰´æƒ
	if kb.OrgID != nil {
		// --- ç»„ç»‡åº“é‰´æƒ ---
		var count int64
		s.Data.DB.Model(&model.OrganizationMember{}).
			Where("organization_id = ? AND user_id = ?", *kb.OrgID, userID).
			Count(&count)
		if count == 0 {
			return nil, errors.New("æƒé™ä¸è¶³ï¼šä½ ä¸æ˜¯è¯¥ç»„ç»‡æˆå‘˜ï¼Œæ— æ³•ä¸Šä¼ æ–‡ä»¶")
		}
	} else {
		// --- ä¸ªäººåº“é‰´æƒ ---
		if kb.CreatorID != userID {
			return nil, errors.New("æƒé™ä¸è¶³ï¼šè¿™ä¸æ˜¯ä½ çš„ä¸ªäººçŸ¥è¯†åº“")
		}
	}

	// 3. æ‰“å¼€æ–‡ä»¶æµ
	src, err := fileHeader.Open()
	if err != nil {
		return nil, err
	}
	defer src.Close()

	// 4. ç”Ÿæˆå­˜å‚¨è·¯å¾„ (å»ºè®®: org_id/kb_id/uuid.pdf æˆ– user_id/kb_id/uuid.pdf)
	// è¿™é‡Œä¸ºäº†ç®€å•ï¼Œç»Ÿä¸€ç”¨: kbs/{kb_id}/{uuid}{ext}
	ext := filepath.Ext(fileHeader.Filename)
	newFileName := uuid.New().String() + ext
	objectName := fmt.Sprintf("kbs/%d/%s", kb.ID, newFileName)
	bucketName := "chimera-docs" // åº”è¯¥ä»Žé…ç½®è¯»å–ï¼Œè¿™é‡Œå…ˆç¡¬ç¼–ç æˆ–ä»Ž cfg ä¼ è¿›æ¥

	// 5. ä¸Šä¼ åˆ° MinIO
	_, err = s.Data.Minio.PutObject(ctx, bucketName, objectName, src, fileHeader.Size, minio.PutObjectOptions{
		ContentType: fileHeader.Header.Get("Content-Type"),
	})
	if err != nil {
		return nil, fmt.Errorf("MinIO ä¸Šä¼ å¤±è´¥: %v", err)
	}

	// 6. æ•°æ®åº“è½åº“
	doc := &model.Document{
		Title:           fileHeader.Filename, // é»˜è®¤æ ‡é¢˜ä¸ºæ–‡ä»¶å
		FileName:        fileHeader.Filename,
		FileSize:        fileHeader.Size,
		FileType:        ext,
		StoragePath:     objectName, // minio://chimera-docs/kbs/1/xyz.pdf
		KnowledgeBaseID: kb.ID,
		OwnerID:         userID,    // è°ä¸Šä¼ çš„
		Status:          "pending", // å¾…è§£æž
	}

	if err := s.Data.DB.Create(doc).Error; err != nil {
		return nil, errors.New("æ–‡ä»¶å…ƒæ•°æ®ä¿å­˜å¤±è´¥")
	}

	// ---------------------------------------------------------
	// ðŸ”¥ 7. å¼‚æ­¥è§¦å‘ Python è§£æž (Fire and Forget)
	// ---------------------------------------------------------
	go func(docID uint, storagePath string, fileName string) {
		// åˆ›å»ºä¸€ä¸ªæ–°çš„èƒŒæ™¯ä¸Šä¸‹æ–‡ (å› ä¸ºå¤–å±‚çš„ ctx è¯·æ±‚ç»“æŸå°±ä¼šå–æ¶ˆ)
		bgCtx := context.Background()

		// å»ºç«‹ gRPC è¿žæŽ¥ (ä¹Ÿå¯ä»¥åœ¨ Data å±‚ç»´æŠ¤ä¸€ä¸ªé•¿è¿žæŽ¥æ± ï¼Œè¿™é‡Œå…ˆç®€å•çŸ­è¿žæŽ¥)
		// æ³¨æ„ï¼šåœ°å€åº”è¯¥ä»Ž conf è¯»å–ï¼Œè¿™é‡Œæš‚æ—¶ç¡¬ç¼–ç  "localhost:50051"
		conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
		if err != nil {
			fmt.Printf("âŒ gRPC è¿žæŽ¥å¤±è´¥: %v\n", err)
			s.updateDocStatus(docID, "failed", err.Error(), 0, 0)
			return
		}
		defer conn.Close()

		client := pb.NewRagServiceClient(conn)

		// ä¿®æ”¹æ•°æ®åº“çŠ¶æ€ä¸º parsing
		s.updateDocStatus(docID, "parsing", "", 0, 0)

		// å‘é€è¯·æ±‚
		resp, err := client.ParseAndIngest(bgCtx, &pb.ParseRequest{
			StoragePath: storagePath,
			FileName:    fileName,
			DocId:       int64(docID),
			KbId:        int64(kbID),
		})

		if err != nil {
			fmt.Printf("âŒ Python è§£æžå‡ºé”™: %v\n", err)
			s.updateDocStatus(docID, "failed", err.Error(), 0, 0)
			return
		}

		if !resp.Success {
			s.updateDocStatus(docID, "failed", resp.ErrorMsg, 0, 0)
			return
		}

		// æˆåŠŸï¼
		s.updateDocStatus(docID, "success", "", int(resp.ChunkCount), int(resp.PageCount))
		fmt.Printf("âœ… æ–‡æ¡£è§£æžæˆåŠŸ: %s (Chunks: %d)\n", fileName, resp.ChunkCount)

	}(doc.ID, doc.StoragePath, doc.FileName) // ä¼ å…¥å‚æ•°

	return &dto.FileResp{
		ID:        doc.ID,
		Title:     doc.Title,
		FileName:  doc.FileName,
		Size:      doc.FileSize,
		Status:    doc.Status,
		CreatedAt: doc.CreatedAt.Format(time.RFC3339),
	}, nil
}

// è¾…åŠ©æ–¹æ³•ï¼šæ›´æ–°æ•°æ®åº“çŠ¶æ€
func (s *FileService) updateDocStatus(id uint, status string, errMsg string, chunks int, pages int) {
	updates := map[string]interface{}{
		"status":    status,
		"error_msg": errMsg,
	}
	if chunks > 0 {
		updates["chunk_count"] = chunks
	}
	if pages > 0 {
		updates["page_count"] = pages
	}
	s.Data.DB.Model(&model.Document{}).Where("id = ?", id).Updates(updates)
}
