package service

import (
	"context"
	"github.com/minio/minio-go/v7"
	"io"
	"log"
	"mime/multipart"
	"path/filepath"
	"strings"

	pb "Chimera-RAG/backend-go/api/rag/v1"
	"Chimera-RAG/backend-go/internal/data"
	"Chimera-RAG/backend-go/internal/dto"
	"Chimera-RAG/backend-go/internal/model"
)

// RagService å®šä¹‰ä¸šåŠ¡é€»è¾‘
type RagService struct {
	grpcClient pb.RagServiceClient
	Data       *data.Data
}

// NewRagService æ„é€ å‡½æ•°
func NewRagService(client pb.RagServiceClient, data *data.Data) *RagService {
	return &RagService{
		grpcClient: client,
		Data:       data,
	}
}

// StreamChat å¤„ç†èŠå¤©è¯·æ±‚ (v0.4.0 ç˜¦èº«ç‰ˆ)
// Go åªéœ€è¦åšä¸€ä¸ªâ€œä¼ è¯ç­’â€ï¼ŒæŠŠ HTTP è¯·æ±‚å‚æ•°è½¬å‘ç»™ gRPC
func (s *RagService) StreamChat(ctx context.Context, userID uint, req dto.ChatReq, respChan chan<- string) {
	defer close(respChan)
	// =================================================================
	// ğŸ›¡ï¸ æ­¥éª¤ 0: å®‰å…¨å®‰æ£€ (Security Check)
	// åœ¨è°ƒç”¨ Python ä¹‹å‰ï¼Œå…ˆæ£€æŸ¥è¿™ä¸ªç”¨æˆ·æœ‰æ²¡æœ‰èµ„æ ¼è®¿é—®è¿™ä¸ª KB
	// =================================================================

	// å¦‚æœæŒ‡å®šäº†çŸ¥è¯†åº“ ID (å¦‚æœ KbID ä¸º 0ï¼Œå¯èƒ½æ˜¯çº¯é—²èŠï¼Œè·³è¿‡æ ¡éªŒ)
	if req.KbID > 0 {
		var kb model.KnowledgeBase
		// 1. æŸ¥è¯¢çŸ¥è¯†åº“æ˜¯å¦å­˜åœ¨
		// å‡è®¾ s.Data.DB æ˜¯ä½ çš„ GORM å®ä¾‹
		if err := s.Data.DB.First(&kb, req.KbID).Error; err != nil {
			log.Printf("âš ï¸ çŸ¥è¯†åº“ä¸å­˜åœ¨: %v", req.KbID)
			respChan <- "ERR: çŸ¥è¯†åº“ä¸å­˜åœ¨æˆ–å·²è¢«åˆ é™¤"
			return
		}

		// 2. æƒé™åˆ¤æ–­
		if kb.OrgID != nil {
			// [ç»„ç»‡çŸ¥è¯†åº“é€»è¾‘]
			var count int64
			// æ³¨æ„ï¼šè¿™é‡ŒæŸ¥è¯¢æ¡ä»¶é‡Œè¦ç”¨ *kb.OrgID å–å‡ºå®é™…çš„å€¼
			s.Data.DB.Model(&model.OrganizationMember{}).
				Where("user_id = ? AND organization_id = ?", userID, *kb.OrgID). // ğŸ‘ˆ åŠ äº† * å·
				Count(&count)

			if count == 0 {
				// ä¸ºäº†æ—¥å¿—å¥½çœ‹ï¼Œè¿™é‡Œä¹Ÿç”¨ *kb.OrgID
				log.Printf("ğŸš¨ è¶Šæƒè­¦å‘Š: ç”¨æˆ· %d -> ç»„ç»‡ %d", userID, *kb.OrgID)
				respChan <- "ERR: â›”ï¸ æ— æƒè®¿é—®ï¼šä½ ä¸æ˜¯è¯¥ç»„ç»‡çš„æˆå‘˜"
				return
			}
		} else {
			// [ä¸ªäººçŸ¥è¯†åº“é€»è¾‘] (OrgID == nil)
			// å¦‚æœä½ çš„é€»è¾‘æ˜¯â€œå¦‚æœä¸å±äºç»„ç»‡ï¼Œå¿…é¡»æ˜¯è‡ªå·±çš„â€ï¼Œå¯ä»¥åœ¨è¿™é‡Œæ ¡éªŒ
			// if kb.UserID != userID { ... }
		}
	}

	// =================================================================
	// âœ… æ­¥éª¤ 1: æ„é€  gRPC è¯·æ±‚ (å®‰æ£€é€šè¿‡ï¼Œæ”¾è¡Œ)
	// =================================================================
	// 1. æ„é€  gRPC è¯·æ±‚
	// è¿™é‡Œä¸å†è°ƒç”¨ EmbedDataï¼Œè€Œæ˜¯ç›´æ¥æŠŠ KbID/OrgID ä¼ ç»™ Python
	grpcReq := &pb.ChatRequest{
		Query:     req.Query,
		SessionId: req.SessionID,    // å¦‚æœæœ‰çš„è¯
		KbId:      int64(req.KbID),  // ğŸ”¥ æ ¸å¿ƒï¼šä¼ è¿‡å»è®© Python çŸ¥é“æŸ¥å“ªä¸ªåº“
		OrgId:     int64(req.OrgID), // ğŸ”¥ æ ¸å¿ƒï¼šä¼ è¿‡å»è®© Python çŸ¥é“æŸ¥å“ªä¸ªç»„ç»‡
		// History: ... (å¦‚æœåšäº†å†å²è®°å½•è½¬æ¢ï¼Œåœ¨è¿™é‡Œèµ‹å€¼)
	}

	// 2. è°ƒç”¨ Python çš„ ChatStream
	// è¿™ä¸€æ­¥ä¹‹åï¼ŒPython ä¼šè‡ªåŠ¨å®Œæˆ Embedding -> Search -> LLM
	stream, err := s.grpcClient.ChatStream(ctx, grpcReq)
	if err != nil {
		log.Printf("âŒ gRPC è°ƒç”¨å¤±è´¥: %v", err)
		respChan <- "ERR: æœåŠ¡ç«¯è¿æ¥å¤±è´¥"
		return
	}

	// 3. è½¬å‘æµå¼å“åº”
	for {
		resp, err := stream.Recv()
		if err == io.EOF {
			// æµç»“æŸ
			break
		}
		if err != nil {
			log.Printf("âŒ gRPC æµè¯»å–é”™è¯¯: %v", err)
			respChan <- "ERR: ç”Ÿæˆä¸­æ–­"
			return
		}

		// å°† Python è¿”å›çš„æ–‡æœ¬ç‰‡æ®µå‘é€ç»™ HTTP å‰ç«¯
		respChan <- resp.AnswerDelta
	}
}

// UploadDocument å¤„ç†æ–‡ä»¶ä¸Šä¼ å…¨æµç¨‹
func (s *RagService) UploadDocument(ctx context.Context, fileHeader *multipart.FileHeader, userID uint) (*model.Document, error) {
	// 1. æ‰“å¼€æ–‡ä»¶æµ
	src, err := fileHeader.Open()
	if err != nil {
		return nil, err
	}
	defer src.Close()

	// 2. [Dataå±‚] ä¸Šä¼ åˆ° MinIO
	// Service å±‚ä¸éœ€è¦çŸ¥é“ MinIO SDK çš„ç»†èŠ‚ï¼Œåªéœ€è¦ç»™æ–‡ä»¶æµ
	storagePath, err := s.Data.UploadFile(ctx, src, fileHeader.Size, fileHeader.Filename)
	if err != nil {
		return nil, err
	}

	// 3. [Dataå±‚] å†™å…¥æ•°æ®åº“ (v0.2.0 æ–‡ä»¶ç¡®æƒ)
	doc := &model.Document{
		Title:           fileHeader.Filename,
		FileName:        fileHeader.Filename,
		FileSize:        fileHeader.Size,
		FileType:        strings.ToLower(filepath.Ext(fileHeader.Filename)), // ç®€å•çš„åç¼€åˆ¤æ–­å·¥å…·å‡½æ•°
		StoragePath:     storagePath,
		KnowledgeBaseID: 0, // é»˜è®¤å½’å±æ ¹ç›®å½•ï¼Œåç»­å¯ä¼ å‚
		OwnerID:         userID,
		Status:          "pending",
	}

	if err := s.Data.CreateDocument(ctx, doc); err != nil {
		// âš ï¸ è¿›é˜¶æ€è€ƒ: å¦‚æœæ•°æ®åº“å†™å…¥å¤±è´¥ï¼Œæœ€å¥½æŠŠ MinIO é‡Œçš„åƒåœ¾æ–‡ä»¶åˆ æ‰ (è¡¥å¿æœºåˆ¶)
		// s.Data.DeleteFile(ctx, storagePath)
		return nil, err
	}

	// 4. [Dataå±‚] å†™å…¥ Redis ä»»åŠ¡é˜Ÿåˆ—
	// ä¼ é€’ Document ID è€Œä¸æ˜¯è·¯å¾„ï¼ŒWorker å¯ä»¥æ ¹æ® ID æŸ¥åº“è·å–æ›´å¤šä¿¡æ¯
	// ä¹Ÿå¯ä»¥ä¼  JSON: {"doc_id": 1, "path": "xxx.pdf"}
	err = s.Data.PushTask(ctx, "task:parse_pdf", storagePath)
	if err != nil {
		// åŒæ ·ï¼Œå¦‚æœé˜Ÿåˆ—å¤±è´¥ï¼Œè€ƒè™‘æ˜¯å¦å›æ»šæ•°æ®åº“çŠ¶æ€ä¸º "failed"
		return nil, err
	}

	return doc, nil
}

// GetFile è·å–æ–‡ä»¶æµç”¨äºé¢„è§ˆ
func (s *RagService) GetFile(ctx context.Context, fileName string) (*minio.Object, int64, error) {
	// è¿™é‡Œç¡¬ç¼–ç  bucket åï¼Œæˆ–è€…ä» s.conf è¯»å–
	bucketName := "chimera-docs"

	// è°ƒç”¨ Data å±‚
	return s.Data.GetFileStream(ctx, bucketName, fileName)
}
