package worker

import (
	"context"
	"log"
	"time"

	pb "Chimera-RAG/api/rag/v1"
	"Chimera-RAG/backend-go/internal/data"

	"github.com/google/uuid"
	"github.com/minio/minio-go/v7"
	"github.com/qdrant/go-client/qdrant"
)

// ETLWorker è´Ÿè´£ä» Redis æ‹¿ä»»åŠ¡ï¼Œå¹¶æ‰§è¡Œ ETL æµç¨‹
type ETLWorker struct {
	data       *data.Data
	grpcClient pb.LLMServiceClient
}

func NewETLWorker(data *data.Data, client pb.LLMServiceClient) *ETLWorker {
	return &ETLWorker{
		data:       data,
		grpcClient: client,
	}
}

// Start å¯åŠ¨ Worker (é˜»å¡è¿è¡Œ)
func (w *ETLWorker) Start(ctx context.Context, numWorkers int) {
	log.Printf("ğŸš€ å¯åŠ¨ %d ä¸ª ETL Workerï¼Œå¼€å§‹ç›‘å¬é˜Ÿåˆ— task:parse_pdf...", numWorkers)

	for i := 0; i < numWorkers; i++ {
		go w.processLoop(ctx, i)
	}
}

func (w *ETLWorker) processLoop(ctx context.Context, workerID int) {
	for {
		select {
		case <-ctx.Done():
			return
		default:
			// 1. é˜»å¡å¼è·å–ä»»åŠ¡ (BLPOP)
			result, err := w.data.Redis.BLPop(ctx, 0*time.Second, "task:parse_pdf").Result()
			if err != nil {
				// Redis å¶å°”è¿æ¥è¶…æ—¶æ˜¯æ­£å¸¸çš„ï¼Œä¸è¦ panic
				log.Printf("[Worker-%d] ç­‰å¾…ä»»åŠ¡ä¸­... (%v)", workerID, err)
				time.Sleep(3 * time.Second)
				continue
			}

			fileName := result[1]
			log.Printf("[Worker-%d] æ”¶åˆ°ä»»åŠ¡: %s", workerID, fileName)

			// 2. æ‰§è¡Œå…·ä½“å¤„ç†é€»è¾‘
			err = w.processFile(ctx, fileName)
			if err != nil {
				log.Printf("[Worker-%d] âŒ å¤„ç†å¤±è´¥: %s, é”™è¯¯: %v", workerID, fileName, err)
			} else {
				log.Printf("[Worker-%d] âœ… å¤„ç†å®Œæˆ: %s", workerID, fileName)
			}
		}
	}
}

// processFile å•ä¸ªæ–‡ä»¶çš„ ETL æµç¨‹
func (w *ETLWorker) processFile(ctx context.Context, fileName string) error {
	// A. ä» MinIO è·å–æ–‡ä»¶æµ
	obj, err := w.data.Minio.GetObject(ctx, "chimera-docs", fileName, minio.GetObjectOptions{})
	if err != nil {
		return err
	}
	defer obj.Close()

	// B. æ¨¡æ‹Ÿè§£ææ–‡æœ¬
	fakeContent := "è¿™æ˜¯ä»æ–‡ä»¶ " + fileName + " è§£æå‡ºæ¥çš„æ¨¡æ‹Ÿæ–‡æœ¬å†…å®¹ã€‚"

	// C. è°ƒç”¨ gRPC (Python) è¿›è¡Œå‘é‡åŒ–
	embResp, err := w.grpcClient.EmbedData(ctx, &pb.EmbedRequest{
		Data: &pb.EmbedRequest_Text{Text: fakeContent},
	})
	if err != nil {
		return err
	}

	// D. å­˜å…¥ Qdrant (é€‚é… V1 SDK å†™æ³•)
	pointID := uuid.New().String()

	// æ„é€  Point (æ•°æ®ç‚¹)
	// æ–°ç‰ˆ SDK å¯¹ Value ç±»å‹çš„å°è£…ç•¥æœ‰ä¸åŒ
	payloadMap := map[string]interface{}{
		"filename": fileName,
	}

	// æ„é€  Upsert è¯·æ±‚
	upsertPoints := []*qdrant.PointStruct{
		{
			Id:      qdrant.NewIDUUID(pointID),            // è¾…åŠ©å‡½æ•°ï¼šUUID è½¬ ID
			Vectors: qdrant.NewVectors(embResp.Vector...), // è¾…åŠ©å‡½æ•°ï¼šåˆ‡ç‰‡è½¬ Vector
			Payload: qdrant.NewValueMap(payloadMap),       // è¾…åŠ©å‡½æ•°ï¼šMap è½¬ Payload
		},
	}

	_, err = w.data.Qdrant.Upsert(ctx, &qdrant.UpsertPoints{
		CollectionName: "chimera_docs",
		Points:         upsertPoints,
	})

	if err != nil {
		log.Printf("âŒ Qdrant å†™å…¥å¤±è´¥: %v", err)
		return err
	}

	log.Printf("âœ… å·²å­˜å…¥ Qdrant: %s (ID: %s)", fileName, pointID)
	return nil
}
