package service

import (
	"context"
	"encoding/json"
	"errors"
	"fmt"
	"io"
	"log"
	"mime/multipart"
	"path/filepath"
	"strings"
	"time"

	pb "Chimera/backend-go/api/runtime/v1"
	"Chimera/backend-go/internal/data"
	"Chimera/backend-go/internal/dto"
	"Chimera/backend-go/internal/model"

	"github.com/minio/minio-go/v7"
	"gorm.io/datatypes"
)

// RuntimeService æ ¸å¿ƒä¸šåŠ¡é€»è¾‘å±‚
type RuntimeService struct {
	grpcClient pb.RuntimeServiceClient
	Data       *data.Data
}

func NewRuntimeService(client pb.RuntimeServiceClient, data *data.Data) *RuntimeService {
	return &RuntimeService{
		grpcClient: client,
		Data:       data,
	}
}

// =================================================================================
// 1. æ ¸å¿ƒè¿è¡Œæ¥å£ (Chat / Workflow)
// =================================================================================

// StreamChat å¤„ç†å¯¹è¯è¯·æ±‚
func (s *RuntimeService) StreamChat(ctx context.Context, userID uint, req dto.ChatReq, respChan chan<- string) {
	defer close(respChan)

	// 1. å®‰å…¨æ£€æŸ¥
	if req.KbID > 0 {
		if err := s.checkKbPermission(req.KbID, userID); err != nil {
			log.Printf("ğŸš¨ StreamChat é‰´æƒå¤±è´¥: %v", err)
			// è¿”å›ç‰¹æ®Šé”™è¯¯æ ‡è¯†ä¾› Handler å¤„ç†çŠ¶æ€ç 
			respChan <- fmt.Sprintf("ERR: â›”ï¸ %s", err.Error())
			return
		}
	}

	// 2. æ„é€ é…ç½®
	// OrgID é€»è¾‘ï¼šå¦‚æœ KB å±äºç»„ç»‡ï¼Œåˆ™ä»¥ KB çš„ OrgID ä¸ºå‡†ï¼›å¦åˆ™çœ‹è¯·æ±‚
	// è¿™é‡Œç®€åŒ–å¤„ç†ï¼Œç›´æ¥ä¼  req çš„å‚æ•°ï¼ŒPython ç«¯ä¼šæ ¹æ® kb_ids å»æŸ¥ Qdrant payload
	configData := map[string]interface{}{
		"kb_ids": []uint{req.KbID},
		"org_id": req.OrgID,
	}
	configBytes, _ := json.Marshal(configData)

	// 3. æ„é€  gRPC è¯·æ±‚
	grpcReq := &pb.RunAgentRequest{
		AppId:         "default_chat_app", // v0.6.0 å°†ä» req.AppID è·å–
		Query:         req.Query,
		SessionId:     req.SessionID,
		AppConfigJson: string(configBytes),
	}

	// 4. è°ƒç”¨ Python Runtime
	stream, err := s.grpcClient.RunAgent(ctx, grpcReq)
	if err != nil {
		log.Printf("âŒ gRPC è°ƒç”¨å¤±è´¥: %v", err)
		respChan <- "ERR: æœåŠ¡ç«¯è¿æ¥å¤±è´¥"
		return
	}

	// 5. è½¬å‘æµå¼å“åº”
	var fullAnswerBuilder strings.Builder

	for {
		resp, err := stream.Recv()
		if err == io.EOF {
			break
		}
		if err != nil {
			log.Printf("âŒ gRPC æµä¸­æ–­: %v", err)
			return
		}

		switch resp.Type {
		case "delta":
			respChan <- resp.Payload
			fullAnswerBuilder.WriteString(resp.Payload)
		case "thought":
			respChan <- "THOUGHT: " + resp.Payload
		case "reference":
			respChan <- "REF: " + resp.Payload
		case "summary":
			log.Printf("ğŸ“Š æ‰§è¡ŒæŠ¥å‘Š: Tokens=%d, Time=%dms", resp.Summary.TotalTokens, resp.Summary.TotalDurationMs)
			// å¼‚æ­¥è½åº“
			go s.saveRunLog(userID, req, resp.Summary, fullAnswerBuilder.String())
		case "error":
			log.Printf("âŒ Agent Error: %s", resp.Payload)
			respChan <- fmt.Sprintf("\n[ç³»ç»Ÿé”™è¯¯]: %s", resp.Payload)
		}
	}
}

// =================================================================================
// 2. æ•°æ®æºç®¡ç†æ¥å£ (File / Feishu / ETL)
// =================================================================================

// UploadDocument ä¸Šä¼ æ–‡ä»¶å¹¶åˆ›å»ºæ•°æ®æº
func (s *RuntimeService) UploadDocument(ctx context.Context, fileHeader *multipart.FileHeader, userID uint, kbID uint) (*model.DataSource, error) {
	// 1. é‰´æƒ
	if err := s.checkKbPermission(kbID, userID); err != nil {
		return nil, err
	}

	// 2. MinIO ä¸Šä¼ 
	src, err := fileHeader.Open()
	if err != nil {
		return nil, err
	}
	defer src.Close()

	storagePath, err := s.Data.UploadFile(ctx, src, fileHeader.Size, fileHeader.Filename)
	if err != nil {
		return nil, err
	}

	// 3. æ„é€  Config JSON
	configMap := map[string]interface{}{
		"storage_path": storagePath,
		"file_size":    fileHeader.Size,
		"file_ext":     strings.ToLower(filepath.Ext(fileHeader.Filename)),
		"file_name":    fileHeader.Filename, // Pythonç«¯ FileConnector éœ€è¦è¿™ä¸ª
	}
	configJSON, _ := json.Marshal(configMap)

	// 4. æ•°æ®åº“è½åº“
	ds := &model.DataSource{
		KnowledgeBaseID: kbID,
		Type:            "file",
		Name:            fileHeader.Filename,
		Config:          datatypes.JSON(configJSON),
		Status:          "pending",
	}
	if err := s.Data.DB.WithContext(ctx).Create(ds).Error; err != nil {
		return nil, err
	}

	// 5. è§¦å‘å¼‚æ­¥ ETL (å¤ç”¨é€»è¾‘)
	s.triggerAsyncETL(ds.ID, kbID, "file", configJSON)

	return ds, nil
}

// CreateFeishuSource åˆ›å»ºé£ä¹¦æ•°æ®æº
func (s *RuntimeService) CreateFeishuSource(ctx context.Context, userID uint, req dto.CreateDataSourceReq) (*model.DataSource, error) {
	// 1. é‰´æƒ
	if err := s.checkKbPermission(req.KbID, userID); err != nil {
		return nil, err
	}

	// 2. æ„é€  Config JSON
	configMap := map[string]string{
		"app_id":        req.FeishuConfig.AppID,
		"app_secret":    req.FeishuConfig.AppSecret,
		"wiki_space_id": req.FeishuConfig.WikiSpaceID,
	}
	configJSON, _ := json.Marshal(configMap)

	// 3. æ•°æ®åº“è½åº“
	ds := &model.DataSource{
		KnowledgeBaseID: req.KbID,
		Type:            "feishu", // å¯¹åº” Python ç«¯çš„å·¥å‚ key
		Name:            req.Name,
		Config:          datatypes.JSON(configJSON),
		Status:          "pending",
	}
	if err := s.Data.DB.WithContext(ctx).Create(ds).Error; err != nil {
		return nil, err
	}

	// 4. è§¦å‘å¼‚æ­¥ ETL
	s.triggerAsyncETL(ds.ID, req.KbID, "feishu", configJSON)

	return ds, nil
}

// GetFile ä¸‹è½½æ–‡ä»¶æµ
func (s *RuntimeService) GetFile(ctx context.Context, fileName string) (*minio.Object, int64, error) {
	bucketName := "chimera-docs"
	return s.Data.GetFileStream(ctx, bucketName, fileName)
}

// =================================================================================
// 3. ç§æœ‰è¾…åŠ©æ–¹æ³• (Helpers)
// =================================================================================

// checkKbPermission ç»Ÿä¸€é‰´æƒé€»è¾‘
func (s *RuntimeService) checkKbPermission(kbID uint, userID uint) error {
	var kb model.KnowledgeBase
	if err := s.Data.DB.First(&kb, kbID).Error; err != nil {
		return errors.New("çŸ¥è¯†åº“ä¸å­˜åœ¨")
	}

	// ç»„ç»‡åº“
	if kb.OrgID != nil {
		var count int64
		s.Data.DB.Model(&model.OrganizationMember{}).
			Where("organization_id = ? AND user_id = ?", *kb.OrgID, userID).
			Count(&count)
		if count == 0 {
			return errors.New("æƒé™ä¸è¶³ï¼šä½ ä¸æ˜¯è¯¥ç»„ç»‡æˆå‘˜")
		}
		return nil
	}

	// ä¸ªäººåº“
	if kb.CreatorID != userID {
		return errors.New("æƒé™ä¸è¶³ï¼šè¿™ä¸æ˜¯ä½ çš„ä¸ªäººçŸ¥è¯†åº“")
	}
	return nil
}

// triggerAsyncETL ç»Ÿä¸€è§¦å‘ Python ETL
func (s *RuntimeService) triggerAsyncETL(dsID uint, kbID uint, sourceType string, configBytes []byte) {
	go func() {
		// 30åˆ†é’Ÿè¶…æ—¶ï¼Œé€‚åº”å¤§æ–‡ä»¶æˆ–å¤§é‡é£ä¹¦æ–‡æ¡£åŒæ­¥
		bgCtx, cancel := context.WithTimeout(context.Background(), 30*time.Minute)
		defer cancel()

		s.updateDataSourceStatus(dsID, "syncing", "", 0, 0)
		log.Printf("ğŸš€ [ETL Start] SourceID=%d Type=%s", dsID, sourceType)

		// è°ƒç”¨ gRPC
		resp, err := s.grpcClient.SyncDataSource(bgCtx, &pb.SyncRequest{
			KbId:         int64(kbID),
			DatasourceId: int64(dsID),
			Type:         sourceType,
			ConfigJson:   string(configBytes),
		})

		// é”™è¯¯å¤„ç†
		if err != nil {
			log.Printf("âŒ [ETL Error] RPC Failed: %v", err)
			s.updateDataSourceStatus(dsID, "failed", fmt.Sprintf("RPC Error: %v", err), 0, 0)
			return
		}

		if !resp.Success {
			log.Printf("âŒ [ETL Error] Python Logic Failed: %s", resp.ErrorMsg)
			s.updateDataSourceStatus(dsID, "failed", resp.ErrorMsg, 0, 0)
			return
		}

		// æˆåŠŸ
		log.Printf("âœ… [ETL Success] SourceID=%d Chunks=%d Pages=%d", dsID, resp.ChunksCount, resp.PageCount)
		s.updateDataSourceStatus(dsID, "active", "", int(resp.ChunksCount), int(resp.PageCount))
	}()
}

// updateDataSourceStatus æ›´æ–°æ•°æ®åº“çŠ¶æ€
func (s *RuntimeService) updateDataSourceStatus(id uint, status string, errMsg string, chunks int, pages int) {
	updates := map[string]interface{}{
		"status":         status,
		"error_msg":      errMsg,
		"last_sync_time": time.Now(),
	}
	if chunks > 0 {
		updates["chunk_count"] = chunks
	}
	if pages > 0 {
		updates["page_count"] = pages
	}
	if err := s.Data.DB.Model(&model.DataSource{}).Where("id = ?", id).Updates(updates).Error; err != nil {
		log.Printf("âŒ DB Update Failed: %v", err)
	}
}

// saveRunLog ä¿å­˜ç›‘æ§æ—¥å¿—
func (s *RuntimeService) saveRunLog(userID uint, req dto.ChatReq, summary *pb.RunSummary, answer string) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	runLog := &model.AppRunLog{
		OrgID:            req.OrgID,
		AppID:            "default_chat_app",
		UserID:           userID,
		SessionID:        req.SessionID,
		Query:            req.Query,
		Answer:           answer,
		TotalTokens:      int(summary.TotalTokens),
		PromptTokens:     int(summary.PromptTokens),
		CompletionTokens: int(summary.CompletionTokens),
		DurationMs:       summary.TotalDurationMs,
		Status:           summary.FinalStatus,
	}

	if err := s.Data.DB.WithContext(ctx).Create(runLog).Error; err != nil {
		log.Printf("âŒ æ—¥å¿—å…¥åº“å¤±è´¥: %v", err)
	} else {
		log.Printf("âœ… æ—¥å¿—å·²å…¥åº“ (ID: %d)", runLog.ID)
	}
}